[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/LevelWinner.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/PNG/You_Lose/Table.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/PNG/You_Win/Header.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/PNG/Buttons/BTNs_Active/Play_BTN.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/PNG/You_Lose/Replay_BTN.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/PNG/You_Win/Score.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/PNG/You_Win/Star_03.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/PNG/You_Lose/Record.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/PNG/You_Lose/Window.png" type="Texture" id=9]

[node name="LevelWinnerThreeStar" type="Control"]
script = ExtResource( 1 )

[node name="Panel" type="TextureRect" parent="."]
margin_left = 234.0
margin_top = 40.0
margin_right = 1174.0
margin_bottom = 1120.0
rect_scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 9 )

[node name="Title" type="TextureRect" parent="Panel"]
margin_left = 278.333
margin_top = 50.0
margin_right = 731.333
margin_bottom = 110.0
texture = ExtResource( 3 )

[node name="StarOne" type="Sprite" parent="Panel"]
position = Vector2( 211.666, 404 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="StarTwo" type="Sprite" parent="Panel"]
position = Vector2( 465, 338 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="StartThree" type="Sprite" parent="Panel"]
position = Vector2( 706.001, 404 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="Score" type="Sprite" parent="Panel"]
position = Vector2( 635, 598 )
texture = ExtResource( 2 )

[node name="ScoreTitle" type="Sprite" parent="Panel/Score"]
position = Vector2( -371, 0 )
texture = ExtResource( 6 )

[node name="Score" type="Label" parent="Panel/Score"]
margin_left = -25.0
margin_top = -28.0
margin_right = -3.0
margin_bottom = -14.0
rect_scale = Vector2( 3, 3 )

[node name="RecordActual" type="Sprite" parent="Panel"]
position = Vector2( 635, 746 )
texture = ExtResource( 2 )

[node name="RecordTitle" type="Sprite" parent="Panel/RecordActual"]
position = Vector2( -371, 0 )
texture = ExtResource( 8 )

[node name="Record" type="Label" parent="Panel/RecordActual"]
margin_left = -25.0
margin_top = -28.0
margin_right = -3.0
margin_bottom = -14.0
rect_scale = Vector2( 3, 3 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_left = 386.0
margin_top = 460.0
margin_right = 1060.0
margin_bottom = 676.0
rect_scale = Vector2( 0.4, 0.4 )
custom_constants/separation = 158

[node name="Retry" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_right = 222.0
margin_bottom = 216.0
icon = ExtResource( 5 )
flat = true

[node name="Next" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_left = 380.0
margin_right = 602.0
margin_bottom = 216.0
icon = ExtResource( 4 )
flat = true

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Next" to="." method="_on_Next_pressed"]
